src/z80asm/z80asm2/t/20-preproc/expected/defgroup_09.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/20-preproc//input/defgroup_09.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/20-preproc/input/defgroup_09.asm...
t/20-preproc/input/defgroup_09.asm:3:10: error: Expected ',' or end of line in DEFGROUP directive
        var1 var2 = 1+2*3 var3
             ^
# file: t/20-preproc/input/defgroup_09.asm
EndOfLine	"\n"	5:1	
symbol	__CPU_Z80__	1	(defined at <builtin>:1:1)
symbol	__CPU_ZILOG__	1	(defined at <builtin>:1:1)
symbol	__FLOAT_GENMATH__	1	(defined at <builtin>:1:1)
